--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>sign up form</title>
 </head>
 <body>
@@ -16,23 +16,23 @@
             <form>
             <div class="form-group">
                 <label for="first-name">First Name</label>
-                <input type="text" name="firstname" id="first-name">
+                <input type="text" name="firstname" id="first-name" required>
             </div>
             <div class="form-group">
                 <label for="last-name">Last Name</label>
-                <input type="text" name="lastname" id="last-name">
+                <input type="text" name="lastname" id="last-name" required>
             </div>
             <div class="form-group">
                 <label for="email">Email</label>
-                <input type="text" name="email" id="email">
+                <input type="text" name="email" id="email" required>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="text" name="password" id="password">
+                <input type="text" name="password" id="password" required>
             </div>
             <div class="form-group">
                 <label for="password2">Confirm Password</label>
-                <input type="text" name="password2" id="password2">
+                <input type="text" name="password2" id="password2" required>
             </div>
             <button type="submit" class="btn">Sign Up</button>
             <p class="button-text">By clicking the Sign Up button, you agree to our <a href="#">Terms & Conditions</a> and <a href="#">Privacy Policy</a></p>
