Added a log in page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </form>
     </div>
     <footer>
-        <p>Already have an account? <a href="#">Login Here</a></p>
+        <p>Already have an account? <a href="login.html">Login Here</a></p>
     </footer>
 </div>
 </body>
